// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic imports 1`] = `
"import { AminoMsg } from \\"@cosmjs/amino\\";
import { isSet } from \\"@osmonauts/helpers\\";
import { MsgTypePackageB } from \\"./b\\";"
`;

exports[`bundle deps 1`] = `
Object {
  "./b": Array [
    "MsgTypePackageB",
  ],
  "./c": Array [
    "MsgTypePackageC",
  ],
}
`;

exports[`bundle deps 2`] = `
"import { MsgTypePackageC } from \\"./c\\";
import { MsgTypePackageB } from \\"./b\\";
import { AminoMsg } from \\"@cosmjs/amino\\";
import { isSet } from \\"@osmonauts/helpers\\";"
`;

exports[`from package c deps 1`] = `
Object {
  "./b": Array [
    "MsgTypePackageB",
  ],
}
`;

exports[`from package c deps 2`] = `
"import { MsgTypePackageB } from \\"./b\\";
import { AminoMsg } from \\"@cosmjs/amino\\";
import { isSet } from \\"@osmonauts/helpers\\";"
`;

exports[`mutations 1`] = `
Array [
  Object {
    "comment": null,
    "message": "MsgTypePackageC",
    "messageImport": "cosmology/example/c.proto",
    "methodName": "ActionFromPackageC",
    "package": "cosmology.finance",
    "response": "MsgTypePackageCResponse",
    "responseImport": "cosmology/example/c.proto",
  },
  Object {
    "comment": null,
    "message": "MsgTypePackageB",
    "messageImport": "cosmology/example/b.proto",
    "methodName": "ActionFromPackageB",
    "package": "cosmology.finance",
    "response": "MsgTypePackageBResponse",
    "responseImport": "cosmology/example/b.proto",
  },
]
`;

exports[`queries 1`] = `
Array [
  Object {
    "comment": "Config returns the current app config.",
    "message": "QueryConfigRequest",
    "messageImport": "cosmology/example/c.proto",
    "methodName": "Config",
    "package": "cosmology.finance",
    "response": "QueryConfigResponse",
    "responseImport": "cosmology/example/c.proto",
  },
]
`;
